<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginTop="110dp"
    android:layout_marginBottom="30dp"
    app:cardBackgroundColor="#fff"
    app:cardElevation="20dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_temp"
                android:text="@string/item_today_detail_temp"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_temp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_shidu"
                android:text="@string/item_today_detail_shidu"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_shidu"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_pressure"
                android:text="@string/item_today_detail_pre"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_pres"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:background="@drawable/divider"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="1px"/>

        <LinearLayout
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_precipitation"
                android:text="@string/item_today_detail_rain"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_rain"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_wind_speed"
                android:text="@string/item_today_detail_wind_speed"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_wind"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_vis"
                android:text="@string/item_today_detail_vis"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_vis"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>