<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#669900"
    app:cardElevation="20dp"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_weather_brf"
            android:src="@drawable/city_bg_sunny"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_city"
            android:textSize="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="15sp"
            android:paddingBottom="5sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_now_temp"
            android:paddingStart="15sp"
            android:textSize="60sp"
            android:text="@string/item_toady_brf_now_temp"
            android:layout_below="@id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_weather_brf"
            android:text="@string/item_today_brf_weather_brf"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_below="@id/txt_now_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_update_time"
            android:text="@string/item_today_brf_update_time"
            android:paddingTop="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_weather_brf"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>